# LoopGaussian

./: .gitignore  LICENSE  index.html  readme.md  requirements.txt  train_loop.py  train_loop.sh
CinemaGaussian/lib/: svcluster
CinemaGaussian/model/: __init__.py  model.py  motion_field.py  poinetnet_autoencoder.py
CinemaGaussian/model/VCCS/: CMakeLists.txt  VCCS.py  pcl_vccs.cpp
CinemaGaussian/rendering/: __init__.py  camera_manager.py  renderer.py
CinemaGaussian/utils/: Cluster.py  Loss.py  PlyProcess.py  PositionEncoding.py  Sampling.py  Sort.py  __init__.py
gaussian_splatting/: render.py  render_loop.py  render_old.py  train.py
gaussian_splatting/arguments/: __init__.py
gaussian_splatting/gaussian_renderer/: __init__.py
gaussian_splatting/scene/: cameras.py  gaussian_model.py
